# MLOPS-2-E2E-Pipeline-DVC-AWS-S3

./: .gitignore  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
dvclive/: params.yaml
src/: model_building.py  model_evaluation.py
