[project]
name = "mlops-2-e2e-pipeline-dvc-aws-s3"
version = "0.1.0"
description = "This project covers the end to end understanding for creating an ML pipeline and working around it using DVC for experiment tracking and data versioning(using AWS S3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logging>=0.4.9.6",
    "pandas>=2.3.3",
]
