[project]
name = "mlops-2-e2e-pipeline-dvc-aws-s3"
version = "0.1.0"
description = "This project covers the end to end understanding for creating an ML pipeline and working around it using DVC for experiment tracking and data versioning(using AWS S3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.42.61",
    "dvc[s3]>=3.63.0",
    "dvclive>=3.48.5",
    "logging>=0.4.9.6",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "nvidia-ml-py>=13.580.82",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
]
